<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>IssueTrackerClass</class>
 <widget class="QMainWindow" name="IssueTrackerClass">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>682</width>
    <height>505</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>IssueTracker</string>
  </property>
  <widget class="QWidget" name="centralWidget">
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0" colspan="3">
     <widget class="QListWidget" name="issuesListWidget"/>
    </item>
    <item row="1" column="0" colspan="2">
     <widget class="QLineEdit" name="issueDescriptionLineEdit"/>
    </item>
    <item row="1" column="2">
     <widget class="QPushButton" name="addIssuePushButton">
      <property name="text">
       <string>Add</string>
      </property>
     </widget>
    </item>
    <item row="2" column="0">
     <widget class="QPushButton" name="resolveIssuePushButton">
      <property name="text">
       <string>Resolve</string>
      </property>
     </widget>
    </item>
    <item row="2" column="1">
     <widget class="QPushButton" name="removeIssuePushButton">
      <property name="text">
       <string>Remove</string>
      </property>
     </widget>
    </item>
   </layout>
  </widget>
  <widget class="QMenuBar" name="menuBar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>682</width>
     <height>26</height>
    </rect>
   </property>
  </widget>
  <widget class="QToolBar" name="mainToolBar">
   <attribute name="toolBarArea">
    <enum>TopToolBarArea</enum>
   </attribute>
   <attribute name="toolBarBreak">
    <bool>false</bool>
   </attribute>
  </widget>
  <widget class="QStatusBar" name="statusBar"/>
 </widget>
 <layoutdefault spacing="6" margin="11"/>
 <resources>
  <include location="IssueTracker.qrc"/>
 </resources>
 <connections/>
</ui>
